@@ -17,39 +17,32 @@
  */
 package org.apache.cassandra.cql3.statements;
 
-import org.apache.cassandra.cql3.CFName;
+import org.apache.cassandra.cql3.CQLStatement;
 import org.apache.cassandra.service.ClientState;
-import org.apache.cassandra.exceptions.InvalidRequestException;
+import org.apache.cassandra.transport.messages.ResultMessage;
 
-/**
- * Abstract class for statements that apply on a given column family.
- */
-public abstract class CFStatement extends ParsedStatement
+public abstract class PermissionAlteringStatement extends ParsedStatement implements CQLStatement
 {
-    protected final CFName cfName;
-
-    protected CFStatement(CFName cfName)
+    @Override
+    public Prepared prepare()
     {
-        this.cfName = cfName;
+        return new Prepared(this);
     }
 
-    public void prepareKeyspace(ClientState state) throws InvalidRequestException
+    public int getBoundsTerms()
     {
-        if (!cfName.hasKeyspace())
-        {
-            // XXX: We explicitely only want to call state.getKeyspace() in this case, don't move it outside the if.
-            cfName.setKeyspace(state.getKeyspace(), true);
-        }
+        return 0;
     }
 
-    public String keyspace()
-    {
-        assert cfName.hasKeyspace() : "The statement hasn't be prepared correctly";
-        return cfName.getKeyspace();
-    }
+    public void checkAccess(ClientState state)
+    {}
 
-    public String columnFamily()
+    public void validate(ClientState state)
+    {}
+
+    public ResultMessage executeInternal(ClientState state)
     {
-        return cfName.getColumnFamily();
+        // executeInternal is for local query only, thus altering permission doesn't make sense and is not supported
+        throw new UnsupportedOperationException();
     }
 }
