@@ -53,4 +53,10 @@ public class UseStatement extends ParsedStatement implements CQLStatement
         state.setKeyspace(keyspace);
         return new ResultMessage.SetKeyspace(keyspace);
     }
+
+    public ResultMessage executeInternal(ClientState state)
+    {
+        // Internal queries are exclusively on the system keyspace and 'use' is thus useless
+        throw new UnsupportedOperationException();
+    }
 }
